--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -146,7 +146,8 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed css path for tranlation reports
 - Fixed font path for Fedora, ensured build fails if font metric creation fails. BX #458003
 - Set vertical-align:top for TD - BZ #457851
- 
+- Added WARNING for ENTITIES declared in XML files. BZ #456170
+
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
 - Modify xmlClean to output dummy content for empty files (beta)
