no pot update for per-lang po update
git-svn-id: file:///srv/svn/publican/trunk@396 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -370,7 +370,7 @@ endef
 ###############################################################################
 define	PO_Update_Template
 .PHONY:	update-po-${1}
-update-po-${1}:: update-pot
+update-po-${1}::
 	@echo "START: update-po-${1} `date`"
 	@if [ ! -d ${1} ]; then mkdir -p ${1}; fi
 ifneq "$(EXTRA_DIRS)" ""
