complete removal of ent files, remove localisations of licenses
git-svn-id: file:///srv/svn/publican/trunk@418 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/Makefile
+++ b/publican-fedora/Makefile
@@ -56,18 +56,11 @@ clean:
 #
 #######################################################################################
 
-ENT2POT		= entity2pot
-PO2ENTITY	= po2entity
-
-# This is seperate so we enforce only 1 translatable entity file in common content.
 update-pot:
 	@echo "Start $@"
 	@mkdir -p pot
-	@if [ -f en-US/Translatable-Entities.ent ]; then \
-		$(ENT2POT) en-US/Translatable-Entities.ent > pot/Translatable-Entities.pot;\
-	fi
 	@pushd en-US > /dev/null; \
-		for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
+		for xml_file in `find . -maxdepth 1 -name "*.xml" | grep -v Legal_Notice`; do \
 			pot_file=`echo $$xml_file | sed -e 's/\.xml/\.pot/'`;\
 			xml2pot $$xml_file | msguniq  > ../pot/$$pot_file;\
 		done; \
@@ -92,29 +85,11 @@ update-pot:
 #	popd > /dev/null;
 #	@echo "End $@"
 
-entities::
+Common_Content:: 
 	@echo "Start $@"
-	@mkdir -p $(PWD)/Common_Content/$(BRAND)/en-US
-	@cp $(PWD)/en-US/*.ent $(PWD)/Common_Content/$(BRAND)/en-US/.
-	@if [ -f en-US/Translatable-Entities.ent ]; then \
-		pushd en-US > /dev/null; \
-		for lang in $(LANGS); do \
-			if [ ! -d $(PWD)/Common_Content/$(BRAND)/$$lang ]; then \
-				mkdir -p $(PWD)/Common_Content/$(BRAND)/$$lang; \
-			fi; \
-			if [ ! -f ../$$lang/Translatable-Entities.po ]; then \
-				echo "../$$lang/Translatable-Entities.po MISSING Using en-US file"; \
-				cp Translatable-Entities.ent $(PWD)/Common_Content/common/$$lang/.; \
-			else \
-				$(PO2ENTITY) Translatable-Entities.ent ../$$lang/Translatable-Entities.po > $(PWD)/Common_Content/$(BRAND)/$$lang/Translatable-Entities.ent; \
-			fi; \
-		done; \
-		popd > /dev/null; \
-	fi
-	@echo "End $@"
-
-Common_Content:: entities
-	@echo "Start $@"
+	@for lang in $(LANGS) en-US; do \
+		mkdir -p $(PWD)/Common_Content/$(BRAND)/$$lang; \
+	done
 	@cd en-US; \
 	for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
 		po_file=`echo $$xml_file | sed -e 's/\.xml/\.po/'`; \
