--- a/publican-redhat/Makefile
+++ b/publican-redhat/Makefile
@@ -56,11 +56,6 @@ clean:
 #	Common Content specific things
 #
 #######################################################################################
-
-ENT2POT		= entity2pot
-PO2ENTITY	= po2entity
-
-# This is seperate so we enforce only 1 translatable entity file in common content.
 update-pot:
 	@echo "Start $@"
 	@mkdir -p pot
@@ -93,29 +88,12 @@ update-pot:
 #	popd > /dev/null;
 #	@echo "End $@"
 
-entities::
-	@echo "Start $@"
-	@mkdir -p $(PWD)/Common_Content/$(REAL_BRAND)/en-US
-	@cp $(PWD)/en-US/*.ent $(PWD)/Common_Content/$(REAL_BRAND)/en-US/.
-	@if [ -f en-US/Translatable-Entities.ent ]; then \
-		pushd en-US > /dev/null; \
-		for lang in $(LANGS); do \
-			if [ ! -d $(PWD)/Common_Content/$(REAL_BRAND)/$$lang ]; then \
-				mkdir -p $(PWD)/Common_Content/$(REAL_BRAND)/$$lang; \
-			fi; \
-			if [ ! -f ../$$lang/Translatable-Entities.po ]; then \
-				echo "../$$lang/Translatable-Entities.po MISSING Using en-US file"; \
-				cp Translatable-Entities.ent $(PWD)/Common_Content/common/$$lang/.; \
-			else \
-				$(PO2ENTITY) Translatable-Entities.ent ../$$lang/Translatable-Entities.po > $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/Translatable-Entities.ent; \
-			fi; \
-		done; \
-		popd > /dev/null; \
-	fi
-	@echo "End $@"
 
-Common_Content:: entities
+Common_Content::
 	@echo "Start $@"
+	@for lang in $(LANGS) en-US; do \
+		mkdir -p $(PWD)/Common_Content/$(REAL_BRAND)/$$lang; \
+	done
 	@cd en-US; \
 	for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
 		po_file=`echo $$xml_file | sed -e 's/\.xml/\.po/'`; \
