--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.34
-Release:	0.t83%{?dist}
+Release:	0.t84%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -153,6 +153,7 @@ rm -rf $RPM_BUILD_ROOT
 - Made VERSION and RELEASE over-rideable. BZ #458421
 - Fixed display of OL nested in UL. BZ #457915
 - Added "make pom" to output a basic maven pom file.
+- Updated doco. BZ #458764
 
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
