make layout match new conventions
git-svn-id: file:///srv/svn/publican/trunk@427 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -154,6 +154,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed display of OL nested in UL. BZ #457915
 - Added "make pom" to output a basic maven pom file.
 - Updated doco. BZ #458764
+- Updated Conventions.xml. BZ #456026
 
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
