fix web rpm upgrade script
git-svn-id: file:///srv/svn/publican/trunk@457 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,7 +5,7 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
-Version:	0.35
+Version:	0.36
 Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
@@ -142,6 +142,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
+* Tue Sep 2 2008 Jeff Fearn <jfearn@redhat.com> 0.36-0
+- Fix Bug in web rpm upgrade script.
+
 * Mon Sep 1 2008 Jeff Fearn <jfearn@redhat.com> 0.35-0
 - Add missing xerces-j2 Requires. BZ #457497
 - Fixed css path for tranlation reports.
