Changed create_book option --revision to --edition
git-svn-id: file:///srv/svn/publican/trunk@459 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -142,6 +142,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
+* Wed Sep 3 2008 Joshua Wulf <jwulf@redhat.com> 0.36-1
+- Changed docs reference from --revision to --edition for create_book option
+
 * Tue Sep 2 2008 Jeff Fearn <jfearn@redhat.com> 0.36-0
 - Fix Bug in web rpm upgrade script.
 - Fix Article not building rpms.
