Fixed bogus verbatim layout. BZ #460771
git-svn-id: file:///srv/svn/publican/trunk@467 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -170,6 +170,7 @@ rm -rf $RPM_BUILD_ROOT
 - Made PDF and HTML display product version in similar style. BZ #456486
 - Remove ID's from common files. BZ #460770
 - Allowed footnote to keep ID. BZ #460790
+- Fixed bogus verbatim layout. BZ #460771
 
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
