--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.36
-Release:	6%{?dist}
+Release:	7%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -147,7 +147,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.36-6
+* Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.36-7
 - Fix Bug in web rpm upgrade script.
 - Fix Article not building rpms.
 - Switch ja-JP  font name in pdf from SazanamiMincho to SazanamiGothic
@@ -159,6 +159,7 @@ rm -rf $RPM_BUILD_ROOT
 - Made background of remark a pretty yellow. BZ #459213
 - Fix Accessibility typo. BZ #460856
 - Fix spurious hyphenation in verbatim.
+- Fix broken RPM packages when titles have been translated.
 
 * Mon Sep 1 2008 Jeff Fearn <jfearn@redhat.com> 0.35-0
 - Add missing xerces-j2 Requires. BZ #457497
