Fix display bug in html-single. BZ #461375
git-svn-id: file:///srv/svn/publican/trunk@477 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -160,6 +160,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix Accessibility typo. BZ #460856
 - Fix spurious hyphenation in verbatim.
 - Fix broken RPM packages when titles have been translated.
+- Fix display bug in html-single. BZ #461375
 
 * Mon Sep 1 2008 Jeff Fearn <jfearn@redhat.com> 0.35-0
 - Add missing xerces-j2 Requires. BZ #457497
