fix help text and doco BZ 460736
git-svn-id: file:///srv/svn/publican/trunk@484 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -164,6 +164,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added FAQ entry for Java weirdness. BZ #460738
 - Add default encoding to XML files. BZ #461379
 - Removed corpauthor from template. BZ #461222
+- Fixed create_book help text. BZ #460736
 
 * Mon Sep 1 2008 Jeff Fearn <jfearn@redhat.com> 0.35-0
 - Add missing xerces-j2 Requires. BZ #457497
