--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -165,6 +165,7 @@ rm -rf $RPM_BUILD_ROOT
 - Add default encoding to XML files. BZ #461379
 - Removed corpauthor from template. BZ #461222
 - Fixed create_book help text. BZ #460736
+- Added menuchoice tag. BZ #459671
 
 * Mon Sep 1 2008 Jeff Fearn <jfearn@redhat.com> 0.35-0
 - Add missing xerces-j2 Requires. BZ #457497
