--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,8 +5,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.36
-Release:	7.t3%{?dist}
+Version:	0.37
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -147,7 +147,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.36-7
+* Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
 - Fix Article not building rpms.
 - Switch ja-JP  font name in pdf from SazanamiMincho to SazanamiGothic
