fix translation repo
git-svn-id: file:///srv/svn/publican/trunk@496 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -117,7 +117,7 @@ update-pot:
 	@make -C content/docs update-pot
 	@echo "End $@"
 
-SOURCE	= https://svn.devel.redhat.com/repos/ecs/Software/$(NAME)/1.0/GUI_Strings
+SOURCE	= https://svn.devel.redhat.com/repos/ecs/Software/publican-common/1.0
 
 resync-po:: clean
 	@echo "Start $@"
