Made comments in highlighted code more prominent. BZ #462552
git-svn-id: file:///srv/svn/publican/trunk@504 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -155,6 +155,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix translation report error on 2 charater langs, CSS, and layout. BZ #465201
 - Added error for tgroup.cols not matching entry count. BZ #462205
 - Fix TOC padding for appendix and glossary. BZ #462991
+- Made comments in highlighted code more prominent. BZ #462552
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
