--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -157,6 +157,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix TOC padding for appendix and glossary. BZ #462991
 - Made comments in highlighted code more prominent. BZ #462552
 - Added citerefentry, refentrytitle, and manvolnum to list of QA'd tags. BZ #464038
+- Fixed '1' in ulink with no text. BZ #465411
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
