Change env path to be more portable. Patch by Artem Zolochevskiy . BZ #466194
git-svn-id: file:///srv/svn/publican/trunk@508 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -158,6 +158,7 @@ rm -rf $RPM_BUILD_ROOT
 - Made comments in highlighted code more prominent. BZ #462552
 - Added citerefentry, refentrytitle, and manvolnum to list of QA'd tags. BZ #464038
 - Fixed '1' in ulink with no text. BZ #465411
+- Change env path to be more portable. Patch by Artem Zolochevskiy . BZ #466194
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
